--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@ img { max-width: 100% }
 
 textarea { resize: none }
 
+.description {
+
+    font-family: inherit;
+    font-size: 1rem;
+    line-height: 2;
+    white-space: pre-wrap;
+
+}
+
 .display-img { 
     
     height: 100px;
